2005-07-05  Antoine Moreau  <antoine.moreau@univ-bpclermont.fr>

	* DLD-FUNCTIONS/betainc.cc (Fbetainc): Fix doc string to match
	function definition..

2005-07-05  Mats Jansson  <mats.e.jansson@home.se>

         * file-io.cc (Fmkstemp): Check if second argument is true
         before marking file for deletion.

2005-07-05  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (octave_char_matrix_str::do_index_op_internal):
	Rename from char_matrix_str::do_index_op.  New arg, type.
	ov-str-mat.h (octave_char_matrix_str::do_index_op): Define using
	do_index_op_internal.
	(octave_char_matrix_sq_str::do_index_op): New function.

2005-07-01  John W. Eaton  <jwe@octave.org>

	* parse.y (end_error): Also handle end_try_catch case.

2005-06-17  John W. Eaton  <jwe@octave.org>

	* help.cc (help_from_list, help_from_symbol_table, 
	help_from_file): New arg, symbol_found.
	(builtin_help): Use symbol_found arg to determine whether help
	text is empty or symbol is not available.

	* symtab.cc (symbol_record::print_info): Print more info.

	* DLD-FUNCTIONS/dispatch.cc (Fdispatch_help): Delete.
	(dispatch_record): Don't prepend "<>" to help text.
	(Fdispatch): Don't setup dispatched help.

	* help.cc (extract_help_from_dispatch): New function.
	(help_from_symbol_table): Use it.
	* defun.cc (print_usage): Use it.

	* toplev.cc (octave_config_info): Include localapifcnfiledir and
	localapioctfiledir in the list.

	* symtab.h (symbol_record::alias): New arg, mark_to_clear.
	(symbol_record::aliases_to_clear): New data member.
	(symbol_record::push_alias_to_clear): New function.
	* symtab.cc (symbol_record::alias): If mark_to_clear is true, push
	this pointer on aliases_to_clear stack for s.
	(symbol_record::clear): Also clear aliases_to_clear_stack.

	* defun.cc (install_dld_function): Create full file name alias in
	fbi_sym_tab and hide it from view.
	Don't call protect or make_eternal on sym_rec.

	* variables.cc (fcn_out_of_date): New function.